# latam-ml-challenge

./: .gitignore  Dockerfile  LICENSE  Makefile  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
challenge/: api.py  exploration.ipynb  model.py
docs/: challenge.md
reports/: stress-test.html
tests/model/: test_model.py
