[project]
name = "latam-ml-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi~=0.86.0",
    "pydantic~=1.10.2",
    "uvicorn~=0.15.0",
    "numpy~=1.22.4",
    "pandas~=1.3.5",
    "scikit-learn~=1.3.0",
]

[project.optional-dependencies]
dev = [
    "matplotlib~=3.7.2",
    "seaborn~=0.12.2",
    "ruff~=0.6.9",
]
test = [
    "locust~=1.6",
    "coverage~=5.5",
    "pytest~=6.2.5",
    "pytest-cov~=2.12.1",
    "mockito~=1.2.2",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
