[project]
name = "latam-ml-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi~=0.115.0",
    "pydantic~=2.9.0",
    "uvicorn~=0.30.0",
    "numpy~=1.26.4",
    "pandas~=2.2.0",
    "scikit-learn~=1.5.0",
    "xgboost~=2.1.0",
]

[project.optional-dependencies]
dev = [
    "matplotlib~=3.9.0",
    "seaborn~=0.13.0",
    "ruff~=0.6.9",
    "mlflow~=2.15.1",
]
test = [
    "locust~=2.29.0",
    "coverage~=7.6.0",
    "pytest~=8.3.0",
    "pytest-cov~=5.0.0",
    "mockito~=1.5.0",
    "httpx~=0.27.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
